Fix blockly icon vertical alignment.

--- a/theme/blockly-core.less
+++ b/theme/blockly-core.less
@@ -143,6 +143,10 @@ div.blocklyTreeRoot div div div div div.blocklyTreeRow span.blocklyTreeLabel {
     border-radius: 0 !important;
 }
 
+div.blocklyTreeIcon span {
+    vertical-align: middle;
+}
+
 /* Blockly toolbox icons */
 span.blocklyTreeIcon {
     opacity: 1;
@@ -161,65 +165,64 @@ span.blocklyTreeIcon {
     font-size: 1.2rem;
     height: 100%;
     display: none;
-    vertical-align: middle;
 }
 .blocklyTreeSelected .blocklyTreeIcon{
     color: white;
 }
 .blocklyTreeIcon.blocklyTreeIconsearch::before {
     content: "\f002";
-    vertical-align: inherit;
+    vertical-align: top;
 }
 .blocklyTreeIcon.blocklyTreeIconDefault::before {
     content: "\f12e";
-    vertical-align: inherit;
+    vertical-align: top;
 }
 .blocklyTreeIcon.blocklyTreeIconadvancedcollapsed::before {
     content: "\f078";
-    vertical-align: inherit;
+    vertical-align: top;
 }
 .blocklyTreeIcon.blocklyTreeIconadvancedexpanded::before {
     content: "\f077";
-    vertical-align: inherit;
+    vertical-align: top;
 }
 .blocklyTreeIcon.blocklyTreeIconmore::before {
     content: "\f141";
-    vertical-align: inherit;
+    vertical-align: top;
 }
 .blocklyTreeIcon.blocklyTreeIconaddpackage::before {
     content: "\f055";
-    vertical-align: inherit;
+    vertical-align: top;
 }
 .blocklyTreeIcon.blocklyTreeIconloops::before {
     content: "\f01e";
-    vertical-align: inherit;
+    vertical-align: top;
 }
 .blocklyTreeIcon.blocklyTreeIconmath::before {
     content: "\f1ec";
-    vertical-align: inherit;
+    vertical-align: top;
 }
 .blocklyTreeIcon.blocklyTreeIconlogic::before {
     content: "\f074";
-    vertical-align: inherit;
+    vertical-align: top;
 }
 .blocklyTreeIcon.blocklyTreeIconvariables::before {
     content: "\f039";
-    vertical-align: inherit;
+    vertical-align: top;
 }
 .blocklyTreeIcon.blocklyTreeIcontext::before {
     content: "\f035";
-    vertical-align: inherit;
+    vertical-align: top;
 }
 .blocklyTreeIcon.blocklyTreeIconarrays::before {
     content: "\f0cb";
-    vertical-align: inherit;
+    vertical-align: top;
 }
 .blocklyTreeIcon.blocklyTreeIconfunctions {
     font-family: xicon !important;
 }
 .blocklyTreeIcon.blocklyTreeIconfunctions::before {
     content: "\f107";
-    vertical-align: inherit;
+    vertical-align: top;
 }
 .blocklyFlyoutLabelIcon.blocklyFlyoutIconfunctions {
     font-family: xicon !important;
